# nixops-hercules-ci

./: .gitignore  README.md  default.nix  flake.nix  overrides.nix  pyproject.toml  setup.cfg  shell.nix
example/: flake.nix
nix/: nixpkgs.nix
nixops_hercules_ci/: common.py  lock.py  plugin.py  storage.py
tests/: test_nixops_hercules_ci.py
